--- a/css/scribbleapp.css
+++ b/css/scribbleapp.css
@@ -25,7 +25,7 @@
     right:0px;
     top:25px; 
     bottom: 0px;
-    background-color: #000000;
+    background-color: #ffffff;
     border-style:solid;
     border-width:10px;
     border-color:#ffffff
