--- a/DDx/css/ddxclient.css
+++ b/DDx/css/ddxclient.css
@@ -7,7 +7,6 @@
 
 /* Author: attila@google.com (Attila Bodis) */
 
-
 @import url(common.css);
 
 
@@ -84,3 +83,99 @@ label, input {
   font: italic 95% Arial, sans-serif;
   color: #999;
 }
+
+ html, body {
+   width: 100%;
+   height: 100%;
+   margin: 0px 1px 0px -2px;
+   font-family: sans-serif;
+   font-size: 11pt;
+}
+
+.goog-tabpane {
+	background: threedface;
+	padding-left: 1px;
+	position: relative;
+	height: 100%;
+	overflow:hidden;
+	display:block;
+}
+
+.purewebview:focus {outline: none;}
+
+.goog-tabpane-tabs:focus { outline: none;}
+
+.goog-tabpane-tabs {
+	list-style: none;
+	margin: 0px;
+	padding: 0px;
+	height: 1ex;
+	position: relative;
+ }
+
+ .goog-tabpane-cont {
+	 background: threedface;
+	 border: 1px solid;
+	 border-color: threedhighlight threedshadow threedshadow threedhighlight;
+	 padding: 0px;
+	 position: absolute;
+	 top: 25px;
+	 bottom: 3px;
+	 width: 100%;
+ }
+
+ .goog-tabpane-tab, .goog-tabpane-tab-selected {
+	display: block;
+	padding: 3px 3ex 3px;
+	background: threedface;
+	border: 1px solid;
+	margin: 0px;
+ }
+
+ .goog-tabpane-top .goog-tabpane-tab,
+ .goog-tabpane-top .goog-tabpane-tab-selected {
+	 float: left;
+ }
+
+ .goog-tabpane-top .goog-tabpane-tab,
+ .goog-tabpane-top .goog-tabpane-tab-selected {
+	 border-color: threedhighlight threedshadow threedface threedhighlight;
+ }
+
+ .goog-tabpane-top .goog-tabpane-tab {
+	 margin-top: 3px;
+ }
+
+ .goog-tabpane-tab-selected {
+	 font-weight: bold;
+ }
+
+ .goog-tabpane-tab-selected,
+ .goog-tabpane-tab-selected {
+	 padding-bottom: 2px;
+	 padding-top: 2px;
+ }
+
+ .goog-tabpane-top .goog-tabpane-tab-selected {
+	position: relative;
+	top: 1px;
+ }
+
+ p {
+	 margin-top: 0px;
+ }
+
+ table {
+	border-spacing:0;
+	border-collapse:collapse;
+ }
+
+ table, td {
+	border: 1px solid black;
+	padding: 2px;
+	font-size: 9pt;
+ }
+
+ th{
+	font-size: 14px;
+ }
