PWEB-4901 Added sound to HTML5 Asteroids client

--- a/Asteroids/css/AsteroidsApp.css
+++ b/Asteroids/css/AsteroidsApp.css
@@ -46,6 +46,11 @@ html, body {
 	border:0;
 }
 
+#attributionsButton{
+    float:right;
+    border:0;
+}
+
 #pwDiagnosticsPanel{
     margin-top: 25px;
 }
