[PWEB-6356] Display fps/latency/bandwidth info on all samples

--- a/Asteroids/css/AsteroidsApp.css
+++ b/Asteroids/css/AsteroidsApp.css
@@ -50,7 +50,7 @@ html, body {
     margin-top: 25px;
 }
 
-.fps-counter {
+.profiler {
     color: white;
     text-align: center;
     font-family: sans-serif;
