--- a/DDx/css/DDxApp.css
+++ b/DDx/css/DDxApp.css
@@ -69,6 +69,14 @@ label, input {
   color: #999;
 }
 
+.profiler {
+    color: white;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 12px;
+    width: 100px;
+    float:right;
+}
 .centerCell {
   text-align: center;
 }
